@startuml

title __SQLITE-DB-SAMPLE's Class Diagram__\n

  package com.sqlite {
    package com.sqlite.config {
      class DBConfig {
      }
    }
  }
  

  package com.sqlite {
    package com.sqlite.config {
      class DBInitializeConfig {
      }
    }
  }
  

  package com.sqlite {
    package com.sqlite.service {
      interface IUserService {
      }
    }
  }
  

  package com.sqlite {
    package com.sqlite.models {
      class LoginModel {
      }
    }
  }
  

  package com.sqlite {
    package com.sqlite.config {
      class SQLiteDialect {
      }
    }
  }
  

  package com.sqlite {
    class SampleSqliteApplication {
    }
  }
  

  package com.sqlite {
    package com.sqlite.entities {
      class UserLogin {
      }
    }
  }
  

  package com.sqlite {
    package com.sqlite.dao {
      interface UserLoginDao {
      }
    }
  }
  

  package com.sqlite {
    package com.sqlite.models {
      class UserLoginModel {
      }
    }
  }
  

  package com.sqlite {
    package com.sqlite.service {
      package com.sqlite.service.impl {
        class UserService {
        }
      }
    }
  }
  

  SQLiteDialect -up-|> Dialect
  UserService -up-|> IUserService
  UserService o-- UserLoginDao : userDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
